sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/Sanergy_Asset__c.object-meta.xml
<CustomObject>
    <description>Sanergy Assets</description>
    <label>Sanergy Asset</label>
    <nameField>
        <displayFormat>SA-{000000000}</displayFormat>
        <label>Sanergy Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sanergy Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>