sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Current Status of the Asset</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>