sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <label>Asset Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>