sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <description>Asset Name</description>
    <externalId>true</externalId>
    <label>Asset Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>