sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Asset_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Asset_Purchase_Price__c</fullName>
    <label>Asset Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>