sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Scrap</fullName>
            </value>
            <value>
                <fullName>Out for 3rd Party Repair</fullName>
            </value>
            <value>
                <fullName>Inventory-Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>