sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>Asset_Value__c</fullName>
    <label>Asset Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>