sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Asset_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Asset_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to be checked if the asset is under warranty</description>
    <label>Warranty</label>
    <type>Checkbox</type>
</CustomField>