sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Asset_Warranty_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Asset_Warranty_Expiration__c</fullName>
    <description>When the asset warranty will expire</description>
    <label>Warranty Expiration</label>
    <type>Date</type>
</CustomField>