sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Assigned_SIM__c.field-meta.xml
<CustomField>
    <fullName>Assigned_SIM__c</fullName>
    <inlineHelpText>SIM card currently assigned to this phone</inlineHelpText>
    <label>Assigned SIM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>