sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Base_Department__c.field-meta.xml
<CustomField>
    <fullName>Base_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Department where the asset will be mainly located</inlineHelpText>
    <label>Base Department</label>
    <referenceTo>rstk__rtdept__c</referenceTo>
    <relationshipLabel>Sanergy Assets</relationshipLabel>
    <relationshipName>Sanergy_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>