sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Camera__c.field-meta.xml
<CustomField>
    <fullName>Camera__c</fullName>
    <label>Camera</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Forward Facing</fullName>
            </value>
            <value>
                <fullName>Outward Facing</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>