sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Computer__c.field-meta.xml
<CustomField>
    <fullName>Computer__c</fullName>
    <label>MAC Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>