sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/CPU_GHz__c.field-meta.xml
<CustomField>
    <fullName>CPU_GHz__c</fullName>
    <inlineHelpText>CPU Speed</inlineHelpText>
    <label>CPU(GHz)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>