sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Current_Reading__c.field-meta.xml
<CustomField>
    <fullName>Current_Reading__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>