sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Current_Usage__c.field-meta.xml
<CustomField>
    <fullName>Current_Usage__c</fullName>
    <label>Current Usage</label>
    <length>60</length>
    <type>Text</type>
</CustomField>