sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sanergy Employee Accounts</value>
        </filterItems>
        <filterItems>
            <field>Account.Employee_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sanergy Assets</relationshipLabel>
    <relationshipName>Sanergy_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>