sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Date_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Date_Inactive__c</fullName>
    <inlineHelpText>Date item flagged as inactive</inlineHelpText>
    <label>Date Inactive</label>
    <type>Date</type>
</CustomField>