sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Detailed_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Specifications__c</fullName>
    <inlineHelpText>Detailed Specifications</inlineHelpText>
    <label>Detailed Specifications</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>