sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Device_Name__c.field-meta.xml
<CustomField>
    <fullName>Device_Name__c</fullName>
    <description>Name of Device e.g. Computer Name (ICT001\USER)</description>
    <inlineHelpText>Name of Device e.g. Computer Name (ICT001\USER)</inlineHelpText>
    <label>Device Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>