sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Dim_1__c.field-meta.xml
<CustomField>
    <fullName>Dim_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dim 1</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You have selected the wrong department</errorMessage>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Sanergy Assets</relationshipLabel>
    <relationshipName>Sanergy_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>