sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/em__c.field-meta.xml
<CustomField>
    <fullName>em__c</fullName>
    <label>em</label>
    <type>Email</type>
</CustomField>