sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/empEmail__c.field-meta.xml
<CustomField>
    <fullName>empEmail__c</fullName>
    <formula>Employee__r.Work_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>empEmail</label>
    <type>Text</type>
</CustomField>