sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Sanergy Assets</relationshipLabel>
    <relationshipName>Sanergy_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>