sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Functions__c.field-meta.xml
<CustomField>
    <fullName>Functions__c</fullName>
    <label>Functions</label>
    <length>120</length>
    <type>Text</type>
</CustomField>