sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Hard_Disk_GB__c.field-meta.xml
<CustomField>
    <fullName>Hard_Disk_GB__c</fullName>
    <inlineHelpText>Hard Disk Capacity (GB)</inlineHelpText>
    <label>Hard Disk (GB)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>