sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Hours_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Service__c</fullName>
    <label>Hours of Service</label>
    <summarizedField>Sanergy_Assets_Issuance__c.Hours_of_Service__c</summarizedField>
    <summaryForeignKey>Sanergy_Assets_Issuance__c.Asset_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>