sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/IMEI__c.field-meta.xml
<CustomField>
    <fullName>IMEI__c</fullName>
    <label>IMEI</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>