sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Insured__c.field-meta.xml
<CustomField>
    <fullName>Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insured</label>
    <type>Checkbox</type>
</CustomField>