sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Is_Fixture_Component__c.field-meta.xml
<CustomField>
    <fullName>Is_Fixture_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if this asset item is a fixture component to be &quot;permanently attached to a parent asset</description>
    <inlineHelpText>Check this if this asset item is a fixture component to be &quot;permanently attached to a parent asset</inlineHelpText>
    <label>Is Fixture Component</label>
    <type>Checkbox</type>
</CustomField>