sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Date__c</fullName>
    <description>Date of Last Service</description>
    <inlineHelpText>Date of Last Service</inlineHelpText>
    <label>Last Service Date</label>
    <type>Date</type>
</CustomField>