sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Logbook_available__c.field-meta.xml
<CustomField>
    <fullName>Logbook_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logbook available?</label>
    <type>Checkbox</type>
</CustomField>