sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Main_Location__c.field-meta.xml
<CustomField>
    <fullName>Main_Location__c</fullName>
    <label>Main Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
                <default>true</default>
                <label>--None--</label>
            </value>
            <value>
                <fullName>Kilimani</fullName>
            </value>
            <value>
                <fullName>Mukuru</fullName>
            </value>
            <value>
                <fullName>Kinanie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>