sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Maintenance_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Cycle__c</fullName>
    <label>Maintenance Cycle</label>
    <length>60</length>
    <type>Text</type>
</CustomField>