sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/MC_Proxy_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Proxy_ID__c</fullName>
    <label>MC_Proxy_ID</label>
    <type>TextArea</type>
</CustomField>