sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/measurement_unit__c.field-meta.xml
<CustomField>
    <fullName>measurement_unit__c</fullName>
    <label>measurement unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Mileage</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>