sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Next_Asset_Maintenance_Task__c.field-meta.xml
<CustomField>
    <fullName>Next_Asset_Maintenance_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Asset Maintenance Task</label>
    <referenceTo>Asset_Maintenance_Task__c</referenceTo>
    <relationshipLabel>Sanergy Assets</relationshipLabel>
    <relationshipName>Sanergy_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>