sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Next_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_Date__c</fullName>
    <inlineHelpText>Date due for next service</inlineHelpText>
    <label>Next Service Date</label>
    <type>Date</type>
</CustomField>