sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/OS_Description__c.field-meta.xml
<CustomField>
    <fullName>OS_Description__c</fullName>
    <inlineHelpText>Operating System description e.g. &quot;Windows 7 Professional&quot;</inlineHelpText>
    <label>OS Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>