sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/OS_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>OS_Serial_No__c</fullName>
    <description>OS Serial Number</description>
    <inlineHelpText>OS Serial Number</inlineHelpText>
    <label>OS Serial No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>