sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Parent_Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Asset_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If item is a fixture component, choose the Parent Asset ID it belongs to</description>
    <inlineHelpText>If item is a fixture component, choose the Parent Asset ID it belongs to</inlineHelpText>
    <label>Parent Asset ID</label>
    <referenceTo>Sanergy_Asset__c</referenceTo>
    <relationshipLabel>Parent Asset ID</relationshipLabel>
    <relationshipName>Parent_Asset_ID</relationshipName>
    <type>Lookup</type>
</CustomField>