sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Personal_Asset__c.field-meta.xml
<CustomField>
    <fullName>Personal_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a Sanergy or a Personal asset</description>
    <inlineHelpText>Whether a Sanergy or a Personal asset</inlineHelpText>
    <label>Personal Asset</label>
    <type>Checkbox</type>
</CustomField>