sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Planned_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Service_Date__c</fullName>
    <label>Planned Service Date</label>
    <type>Date</type>
</CustomField>