sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Productivity_Suite_Installed__c.field-meta.xml
<CustomField>
    <fullName>Productivity_Suite_Installed__c</fullName>
    <inlineHelpText>Productivity software/Utilities installed e.g. Office 2013, Visio etc</inlineHelpText>
    <label>Productivity Suite Installed</label>
    <type>TextArea</type>
</CustomField>