sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/RAM_MB__c.field-meta.xml
<CustomField>
    <fullName>RAM_MB__c</fullName>
    <inlineHelpText>RAM in MB</inlineHelpText>
    <label>RAM(MB)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>