sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <description>Vehicle registration number</description>
    <inlineHelpText>Vehicle registration number</inlineHelpText>
    <label>Registration Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>