sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Requesting_Company__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Company</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select correct company</errorMessage>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Sanergy Assets (Requesting Company)</relationshipLabel>
    <relationshipName>Sanergy_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>