sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/SAN_Transport_Restrict_001__c.field-meta.xml
<CustomField>
    <fullName>SAN_Transport_Restrict_001__c</fullName>
    <formula>IF(
    RecordType.DeveloperName = &quot;Vehicle&quot;,
    TRUE,
    FALSE
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAN_Transport_Restrict_001</label>
    <type>Checkbox</type>
</CustomField>