sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Sanergy_Department__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sanergy Department</label>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Sanergy Assets (Sanergy Department)</relationshipLabel>
    <relationshipName>Sanergy_Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>