sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Service_Tag_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Tag_ID__c</fullName>
    <description>Service Tag ID</description>
    <label>Service Tag ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>