sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Spare_Keys_Available__c.field-meta.xml
<CustomField>
    <fullName>Spare_Keys_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spare Keys Available?</label>
    <type>Checkbox</type>
</CustomField>