sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <inlineHelpText>Current assigned telephone number</inlineHelpText>
    <label>Telephone Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>