sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/fields/Year_of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Manufacture__c</fullName>
    <inlineHelpText>Year and Month of Manufacture (YYYY-MM)</inlineHelpText>
    <label>Year of Manufacture</label>
    <length>7</length>
    <type>Text</type>
</CustomField>