sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/recordTypes/Accessory_Assets.recordType-meta.xml
<RecordType>
    <fullName>Accessory_Assets</fullName>
    <active>true</active>
    <description>Assets that will be used as accessories to Sanergy assets</description>
    <label>Accessory Assets</label>
</RecordType>