sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/recordTypes/Asset_Parts.recordType-meta.xml
<RecordType>
    <fullName>Asset_Parts</fullName>
    <active>true</active>
    <description>Asset Parts to be fixed/replaced on existing assets</description>
    <label>Asset Parts</label>
</RecordType>