sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/recordTypes/Computers.recordType-meta.xml
<RecordType>
    <fullName>Computers</fullName>
    <active>true</active>
    <description>Asset information for Computers/LaptopsTablets</description>
    <label>Computers</label>
</RecordType>