sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/recordTypes/Equipment_Tools.recordType-meta.xml
<RecordType>
    <fullName>Equipment_Tools</fullName>
    <active>true</active>
    <description>Asset information for Sanergy equipment and tools</description>
    <label>Equipment and Tools</label>
</RecordType>