sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/recordTypes/Laptop_Bag.recordType-meta.xml
<RecordType>
    <fullName>Laptop_Bag</fullName>
    <active>true</active>
    <label>Laptop Bag</label>
</RecordType>