sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/recordTypes/Modems.recordType-meta.xml
<RecordType>
    <fullName>Modems</fullName>
    <active>true</active>
    <description>Sanergy Assets - IT modems</description>
    <label>Modems</label>
</RecordType>