sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/recordTypes/Phones.recordType-meta.xml
<RecordType>
    <fullName>Phones</fullName>
    <active>true</active>
    <description>Asset information for Basic Phones/Smartphones</description>
    <label>Phones</label>
</RecordType>