sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/recordTypes/Printers_and_Scanners.recordType-meta.xml
<RecordType>
    <fullName>Printers_and_Scanners</fullName>
    <active>true</active>
    <label>Printers and Scanners</label>
</RecordType>