sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/recordTypes/Sanergy_Plant_Machinery.recordType-meta.xml
<RecordType>
    <fullName>Sanergy_Plant_Machinery</fullName>
    <active>true</active>
    <label>Sanergy Plant Machinery</label>
</RecordType>