sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/recordTypes/SIM.recordType-meta.xml
<RecordType>
    <fullName>SIM</fullName>
    <active>true</active>
    <description>Asset information for SIM Cards</description>
    <label>SIM</label>
</RecordType>