sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/recordTypes/Tablet.recordType-meta.xml
<RecordType>
    <fullName>Tablet</fullName>
    <active>true</active>
    <description>Asset information on tablets/iPads</description>
    <label>Tablet</label>
</RecordType>