sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/recordTypes/Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Vehicle</fullName>
    <active>true</active>
    <description>Motor Vehicle assets</description>
    <label>Vehicle</label>
</RecordType>