sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/listViews/Assets_in_Inventory.listView-meta.xml
<ListView>
    <fullName>Assets_in_Inventory</fullName>
    <columns>NAME</columns>
    <columns>Asset_Name__c</columns>
    <columns>Asset_Status__c</columns>
    <columns>Make__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Model__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Employee__c</columns>
    <columns>Device_Name__c</columns>
    <columns>Date_Acquired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Status__c</field>
        <operation>equals</operation>
        <value>Inventory</value>
    </filters>
    <label>Assets in Inventory</label>
    <language>en_US</language>
</ListView>