sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/listViews/Machinery.listView-meta.xml
<ListView>
    <fullName>Machinery</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Asset_Name__c</columns>
    <columns>Asset_Status__c</columns>
    <columns>Employee__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sanergy_Asset__c.Sanergy_Plant_Machinery</value>
    </filters>
    <label>Machinery</label>
    <language>en_US</language>
</ListView>