sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/listViews/Modems.listView-meta.xml
<ListView>
    <fullName>Modems</fullName>
    <columns>NAME</columns>
    <columns>Computer__c</columns>
    <columns>Asset_Name__c</columns>
    <columns>Asset_Status__c</columns>
    <columns>Date_Acquired__c</columns>
    <columns>Employee__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sanergy_Asset__c.Modems</value>
    </filters>
    <label>Modems</label>
    <language>en_US</language>
</ListView>