sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/listViews/Phones.listView-meta.xml
<ListView>
    <fullName>Phones</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Asset_Name__c</columns>
    <columns>Asset_Status__c</columns>
    <columns>Employee__c</columns>
    <columns>Make__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Model__c</columns>
    <columns>Phone_Type__c</columns>
    <columns>IMEI__c</columns>
    <columns>Serial_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sanergy_Asset__c.Phones</value>
    </filters>
    <label>Phones</label>
    <language>en_US</language>
</ListView>