sfSandBoxCode/force-app/main/default/objects/Sanergy_Asset__c/listViews/Printers_Scanners.listView-meta.xml
<ListView>
    <fullName>Printers_Scanners</fullName>
    <columns>NAME</columns>
    <columns>Asset_Name__c</columns>
    <columns>Asset_Purchase_Price__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Asset_Value__c</columns>
    <columns>Asset_Status__c</columns>
    <columns>Date_Acquired__c</columns>
    <columns>Device_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sanergy_Asset__c.Printers_and_Scanners</value>
    </filters>
    <label>Printers &amp; Scanners</label>
    <language>en_US</language>
</ListView>